cabal-version:      3.0
name:               earth
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         cidkidnix@protonmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  import: warnings
  build-depends:    base ^>=4.16.3.0,
                    cli-extras,
                    directory,
                    exceptions,
                    filepath,
                    lens,
                    optparse-applicative,
                    text,
                    time,
                    unix,
                    which,
                    aeson

  exposed-modules: Earth.Basalt,
                   Earth.Builders,
                   Earth.Cli,
                   Earth.Darwin,
                   Earth.Deploy,
                   Earth.Flake,
                   Earth.GC,
                   Earth.Helpers,
                   Earth.Nix,
                   Earth.Legacy,
                   Earth.Types

  if !os(darwin) || !os(osx)
     build-depends: linux-mount
     exposed-modules: Earth.Install,
                      Earth.Linux
  hs-source-dirs: src
  default-extensions: ConstraintKinds,
                      FlexibleContexts,
                      ImportQualifiedPost,
                      InstanceSigs,
                      LambdaCase,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      TemplateHaskell

  default-language: Haskell2010

executable earth
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0,
                      hostname,
                      earth,
                      cli-extras,
                      text

    hs-source-dirs:   exe
    default-extensions: ConstraintKinds,
                        FlexibleContexts
    default-language: Haskell2010
    ghc-options: -O2
