cabal-version:      3.0
name:               rebuild
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         cidkidnix@protonmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  import: warnings
  build-depends:    base ^>=4.16.3.0,
                    which,
                    unix,
                    cli-extras,
                    lens,
                    text,
                    exceptions,
                    linux-mount,
                    directory,
                    optparse-applicative

  exposed-modules: Rebuild.Helpers,
                   Rebuild.Builders,
                   Rebuild.Cli,
                   Rebuild.Deploy,
                   Rebuild.Install

  hs-source-dirs: src
  default-language: Haskell2010

executable rebuild
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0,
                      hostname,
                      rebuild,
                      cli-extras,
                      text

    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options: -O2
