cabal-version:      3.0
name:               rebuild
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         cidkidnix@protonmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  import: warnings
  build-depends:    base ^>=4.16.3.0,
                    cli-extras,
                    directory,
                    exceptions,
                    filepath,
                    lens,
                    optparse-applicative,
                    text,
                    time,
                    unix,
                    which

  exposed-modules: Rebuild.Basalt,
                   Rebuild.Builders,
                   Rebuild.Cli,
                   Rebuild.Darwin,
                   Rebuild.Deploy,
                   Rebuild.Flake,
                   Rebuild.GC,
                   Rebuild.Helpers,
                   Rebuild.Nix,
                   Rebuild.Legacy,
                   Rebuild.Types

  if !os(darwin) || !os(osx)
     build-depends: linux-mount
     exposed-modules: Rebuild.Install,
                      Rebuild.Linux
  hs-source-dirs: src
  default-extensions: ConstraintKinds,
                      FlexibleContexts,
                      ImportQualifiedPost,
                      InstanceSigs,
                      LambdaCase,
                      OverloadedRecordDot,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      TemplateHaskell

  default-language: Haskell2010

executable rebuild
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0,
                      hostname,
                      rebuild,
                      cli-extras,
                      text

    hs-source-dirs:   exe
    default-extensions: ConstraintKinds,
                        FlexibleContexts
    default-language: Haskell2010
    ghc-options: -O2
